2007-07-11  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.StandardHeader/StandardHeaderService.cs: fixed bug
	  81996:Sharing violation of header template.

2007-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/FolderNodeBuilder.cs: When adding
	  a folder, expand the parent folder so the new subfolder is shown.
	  It should fix bug #81984.

2007-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/Workbench.cs: Fix GetPad.

2007-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.mdp: Updated.
	* MonoDevelop.Ide.Gui/Document.cs: Set the correct default directory
	  when running the Save As command.

2007-07-06  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs: The
	  ${FileName} tag in headers gives now back the file name without the
	  path. New tags: ${FullFileName} gives back the fully qualified
	  name, ${Directory} gives back the directory the new file is created
	  in, ${FileNameWithoutExtension} gives back the file name without
	  extension.

2007-07-05  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: Differentiate
	between Class, Enum, and Struct.

2007-07-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/TreeViewPad.cs,
	  MonoDevelop.Ide.Gui.Pads/SolutionPad.cs,
	  MonoDevelop.Ide.Gui/Workbench.cs,
	  MonoDevelop.Ide.Tasks/UserTasksView.cs,
	  MonoDevelop.Ide.Tasks/CommentTasksView.cs,
	  MonoDevelop.Ide.Tasks/TaskService.cs: Changed source a bit due to
	  core refactorings.

2007-07-03  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.CodeTemplates/CodeTemplateLoader.cs,
	  MonoDevelop.Ide.CodeTemplates/EditTemplateGroupDialog.cs,
	  MonoDevelop.Ide.CodeTemplates/EditTemplateDialog.cs,
	  MonoDevelop.Ide.CodeTemplates/CodeTemplateGroup.cs,
	  MonoDevelop.Ide.CodeTemplates/CodeTemplate.cs,
	  MonoDevelop.Ide.CodeTemplates/CodeTemplatePanel.cs,