@@ -1,3 +1,9 @@
+2007-07-10  Marcos David Marín Amador <MarcosMarin@gmail.com>
+
+	* MonoDevelop.Ide.Gui.Pads.ClassPad/ProjectNodeBuilder.cs,
+	  MonoDevelop.Ide/MonoDevelop.Ide.addin.xml: Added a context menu
+	  for the project node.
+
 2007-07-11  Mike Krüger <mkrueger@novell.com> 
 
 	* MonoDevelop.Ide.StandardHeader/StandardHeaderService.cs: fixed bug
